Add site menu configuration

--- a/src/hugo/config.toml
+++ b/src/hugo/config.toml
@@ -3,3 +3,34 @@ languageCode = "en-us"
 defaultContentLanguage = "en"
 title = "UNISA LUG"
 theme = "cupper-hugo-theme"
+
+[params]
+
+footer = "Made with [Hugo](https://gohugo.io/). Themed by [Cupper](https://github.com/zwbetz-gh/cupper-hugo-theme). Deployed to [DigitalOcean](https://digitalocean.com/)."
+dateFormat = ".Date"
+
+[[menu.nav]]
+name = "Home"
+url = "/"
+weight = 1
+
+[[menu.nav]]
+name = "FAQs"
+url = "/faq"
+weight = 2
+
+[[menu.nav]]
+name = "Blog"
+url = "/blog/"
+weight = 3
+
+[[menu.nav]]
+name = "Projects"
+url = "/projects"
+weight = 4
+
+[[menu.nav]]
+name = "Feed"
+url = "/feed.xml"
+weight = 5
+
