--- a/src/hugo/config.toml
+++ b/src/hugo/config.toml
@@ -3,6 +3,7 @@ languageCode = "en-us"
 defaultContentLanguage = "en"
 title = "UNISA LUG"
 theme = "cupper-hugo-theme"
+enableGitInfo = "true"
 
 [params]
 
