--- a/src/hugo/config.toml
+++ b/src/hugo/config.toml
@@ -26,12 +26,22 @@ url = "/blog/"
 weight = 3
 
 [[menu.nav]]
+name = "Community"
+url  = "/community"
+weight = 4
+
+[[menu.nav]]
 name = "Projects"
 url = "/projects"
-weight = 4
+weight = 5
+
+[[menu.nav]]
+name = "Association"
+url  = "/association"
+weight = 6
 
 [[menu.nav]]
 name = "Feed"
 url = "/feed.xml"
-weight = 5
+weight = 7
 
