content: rewrite the association page to autorebuild off the association members dataset
Enable necessary hugo features: inline shortcodes

--- a/src/hugo/config.toml
+++ b/src/hugo/config.toml
@@ -3,7 +3,8 @@ languageCode = "en-us"
 defaultContentLanguage = "en"
 title = "UNISA LUG"
 theme = "cupper-hugo-theme"
-enableGitInfo = "true"
+enableGitInfo = true
+enableInlineShortcodes = true
 
 [params]
 
